# rhythm-marble

./: .gitignore  CLAUDE.md  README.md  blender_render.py  convert.py  make_video.py  make_video_2d.py  make_video_forward3d.py  pipeline.py  postfx_lab.py  pyproject.toml  setup.sh  transcribe_ymt3.py
data/twinkle-star/input/: song.mid  wall.json
tools/: download.py  midi_editor.html  transcribe.py  tune_sf2.py
