[project]
name = "rhythm-orbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "basic-pitch>=0.4.0",
    "pedalboard>=0.9.23",
    "pillow>=12.3.0",
    "pretty-midi>=0.2.11",
    "pyfluidsynth>=1.4.0",
    "setuptools<81",
]
