[project]
name = "rhythm-orbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "pedalboard>=0.9.23",
    "pillow>=12.3.0",
    "pretty-midi>=0.2.11",
    "pyfluidsynth>=1.4.0",
    "soundfile>=0.14.0",
]
